# paperless-iq

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml
backend/: __init__.py  analyzer.py  approval_queue.py  audit_log.py  auth.py  database.py  db_migrate.py  grooming.py  inbox_monitor.py  keystore.py  main.py  manual_analysis.py  memory_store.py  models.py  ollama_queue.py  orm_models.py  pdf_utils.py  preview.py  protocols.py  provider_registry.py  rate_limiter.py  requirements.txt  rerankers.py  settings_service.py  translation.py  vector_factory.py  vector_migrate.py  vector_store.py
docker/: Dockerfile
docs/: ARCHITECTURE.md  Automation.md  DECISIONS.md  Discovery.md  Document-Analysis.md  Getting-Started.md  Grooming.md  Home.md  LLM-Providers.md  ROADMAP.md  SETTINGS.md  Troubleshooting.md  Vector-Stores.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: __init__.py  conftest.py  test_cron_scheduling.py  test_embed_audit.py  test_embed_refresh.py  test_grooming.py  test_live_providers.py  test_property_approval_queue.py  test_property_audit_log.py  test_property_credential_opacity.py  test_property_document_analyzer.py  test_property_import_export.py  test_property_inbox_scheduler.py  test_property_manual_analysis.py  test_property_preview.py  test_property_prompt_builder.py  test_property_provider_connectivity.py  test_property_provider_registry.py  test_property_qdrant_store.py  (+27 more)
(+58 files in other folders)
