[project]
name = "paperless-iq"
version = "0.1.0"
description = "AI-powered metadata suggestions for Paperless NGX"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.14.0",
    "anthropic>=0.87.0",
    "boto3>=1.42.78",
    "chromadb>=1.5.5",
    "cryptography>=46.0.7",
    "fastapi>=0.135.2",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "Pillow>=10.0",
    "pypdfium2>=4.30",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "hypothesis>=6.151.10",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
